# Interview

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md
Backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Backend/app/api/: answer.py  auth.py  deps.py  interview.py  jd.py  report.py  resume.py  session.py
Backend/app/core/: config.py  exceptions.py  logging.py  security.py
Backend/app/database/: indexes.py  mongodb.py
Backend/app/llm/: client.py  response_parser.py
Backend/app/models/: answer.py  jd.py  question.py  report.py  resume.py  session.py  user.py
Backend/app/parsers/: base.py  docx_parser.py  pdf_parser.py  txt_parser.py
Backend/app/prompts/: answer_evaluation.py  feedback_generation.py  jd_extraction.py  question_generation.py  resume_extraction.py
Backend/app/reports/: builder.py
Backend/app/repositories/: answer_repo.py  base.py  evaluation_repo.py  jd_repo.py  question_repo.py  report_repo.py  resume_repo.py  session_repo.py  user_repo.py
Backend/app/schemas/: answer.py  auth.py  jd.py  resume.py  session.py
Backend/app/services/: answer_service.py  auth_service.py  evaluation_service.py  feedback_service.py  interview_service.py  jd_service.py  question_service.py  report_service.py  resume_service.py  score_service.py  session_service.py
Backend/app/utils/: file_utils.py  id_utils.py  validators.py
Backend/scripts/: seed_questions.py  verify_imports.py
Backend/tests/: conftest.py
Backend/tests/unit/: test_evaluation_service.py  test_jd_parser.py  test_question_service.py  test_report_builder.py  test_resume_parser.py  test_score_service.py
Frontend/: Dockerfile  package-lock.json  package.json
Frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
Frontend/lib/: constants.ts
Frontend/services/: answerService.ts  api.ts  authService.ts  interviewService.ts  (+3 more)
(+15 files in other folders)
