[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-interview-backend"
version = "1.0.0"
description = "AI-Powered Mock Interview Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Async MongoDB driver
    "motor>=3.5.0",
    "pymongo>=4.8.0",

    # Pydantic V2 + Settings + email validation
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.0.0",

    # HTTP client (for OpenRouter)
    "httpx>=0.27.0",
    "tenacity>=9.0.0",

    # Document parsers
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",

    # File upload / multipart
    "python-multipart>=0.0.9",

    # PDF report generation
    "reportlab>=4.2.0",

    # Environment
    "python-dotenv>=1.0.0",

    # JWT Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.21",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
